Fix color contrast for twitter button

--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -46,7 +46,7 @@
 
     &-username {
       color: #fff;
-      background: $twitter-color;
+      background: $logo-color;
       font-weight: 600;
       font-size: 12px;
       border-radius: 2px;
